Load roles and command aliases from datapack